<resources>
    <string name="app_name">Quaternion-Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quaternion-Calculator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_github">GitHub</string>

    <string name="menu_elementary_arithmetic">Elementary Arithmetic</string>
    <string name="menu_features">Features</string>
    <string name="menu_rotation">Rotation</string>

    <string name="home_second">Home Second</string>
    <string name="_0_0">0.0</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">÷</string>
    <string name="times">×</string>
    <string name="equals">=</string>
    <string name="s">s</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="elementaryarithmetic">\nEnter two quaternions, choose the elementary operation and confirm the selection by pressing \'=\'\n</string>
    <string name="features_text">Enter a quaternion to get a list of its features</string>
    <string name="conjugate">Conjugate:</string>
    <string name="real_part">Real part:</string>
    <string name="imaginary_part">Imaginary part:</string>
    <string name="open_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="norm">Norm:</string>
    <string name="reciprocal">Reciprocal:</string>
    <string name="rotation_text">Enter the point, the rotation axis and the angle by which the point is to be rotated around the axis counterclockwise</string>
    <string name="point">Point:</string>
    <string name="p">P</string>
    <string name="semicolon">;</string>
    <string name="rotation_axis">Rotation axis:</string>
    <string name="angle">Angle:</string>
    <string name="alpha">α</string>
    <string name="degree">°</string>
    <string name="dash">\'</string>
    <string name="new_point">New point:</string>
    <string name="normalized_quaternion">Normalized quaternion:</string>
</resources>
