<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_elementary_arithmetic"
            android:icon="@drawable/ic_baseline_exposure_24"
            android:title="@string/menu_elementary_arithmetic" />
        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_features" />
        <item
            android:id="@+id/nav_rotation"
            android:icon="@drawable/ic_baseline_3d_rotation_24"
            android:title="@string/menu_rotation" />
    </group>
</menu>
